--- a/index.html
+++ b/index.html
@@ -12,4 +12,12 @@
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+    <footer>
+      Tienes un grupo de 6 amigos y quieres invitarlos a cenar por tu cumpleaños.<br><br>
+      
+    -Solo puedes permitirte invitar a las bebidas, ya que estás un poco ajustado de dinero. <br>
+    -Solo un ticket de cena que cuesta 120 € y en el que ya se incluyen las bebidas por un valor de 18 €. <br>
+    -Calcula cuánto tendría que pagar cada comensal para dividir los costos de manera equitativa. <br>
+     -Utiliza JavaScript para hacer el cálculo y mostrar el resultado por consola.
+    <footer>
 </html>
