añadidos grupos e imprimación

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
+Nombre del grupo / cantante / compositor (string). *Año de fundación: cuando se
+formó el grupo (numero). Si está en activo (booleano). Género musical (string).
+-****The Beatles / 1960 / Activo: true / 🎵 Pop Rock -*****Queen / 1970 /
+Activo: false /🎸 Rock -*****AC DC / 1973 / Activo: true / 🤘 Hard Rock
+-******Ludwig van Beethoven / 1770 /Activo: false / 🎼 Clásica -*****The Rolling
+Stones / 1962 / Activo: true / 🎸 Rock
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Vite + TS</title>
   </head>
   <body>
     <div id="app">
-      <h1>TypeScript Sandbox</h1>
+      <h1>Grupos Musicales</h1>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
-    <footer>
-      Tienes un grupo de 6 amigos y quieres invitarlos a cenar por tu cumpleaños.<br><br>
-      
-    -Solo puedes permitirte invitar a las bebidas, ya que estás un poco ajustado de dinero. <br>
-    -Solo un ticket de cena que cuesta 120 € y en el que ya se incluyen las bebidas por un valor de 18 €. <br>
-    -Calcula cuánto tendría que pagar cada comensal para dividir los costos de manera equitativa. <br>
-    -Utiliza JavaScript para hacer el cálculo y mostrar el resultado por consola.
-    <footer>
 </html>
