--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-Nombre del grupo / cantante / compositor (string). *Año de fundación: cuando se
-formó el grupo (numero). Si está en activo (booleano). Género musical (string).
--****The Beatles / 1960 / Activo: true / 🎵 Pop Rock -*****Queen / 1970 /
-Activo: false /🎸 Rock -*****AC DC / 1973 / Activo: true / 🤘 Hard Rock
--******Ludwig van Beethoven / 1770 /Activo: false / 🎼 Clásica -*****The Rolling
-Stones / 1962 / Activo: true / 🎸 Rock
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
   </head>
   <body>
     <div id="app">
       <h1>Grupos Musicales</h1>
     </div>
+    <div id="g1">The Beaattles</div>
+    <div id="g2">Queen</div>
+    <div id="g3">ACDC</div>
+    <div id="g4">Beethoven</div>
+    <div id="g5">The Rolling Stones</div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
